[gd_scene load_steps=105 format=3 uid="uid://bagdl8p276lsp"]

[ext_resource type="Texture2D" uid="uid://7d6y8r0uu7l6" path="res://assets/Snake/Snake_00000.png" id="1_bcl3u"]
[ext_resource type="Script" path="res://scripts/snake.gd" id="1_n1tlj"]
[ext_resource type="Texture2D" uid="uid://duqptofuaarr8" path="res://assets/Snake/Snake_00001.png" id="2_rlc6f"]
[ext_resource type="Texture2D" uid="uid://bd65462ktxn7r" path="res://assets/Snake/Snake_00002.png" id="3_a0ni1"]
[ext_resource type="Texture2D" uid="uid://jjnfa7k3fi7x" path="res://assets/Snake/Snake_00003.png" id="4_s13dl"]
[ext_resource type="Texture2D" uid="uid://3mhlye16oiky" path="res://assets/Snake/Snake_00004.png" id="5_johfp"]
[ext_resource type="Texture2D" uid="uid://ta83yrhc2jof" path="res://assets/Snake/Snake_00005.png" id="6_22nao"]
[ext_resource type="Texture2D" uid="uid://ckfb33thy7x8f" path="res://assets/Snake/Snake_00006.png" id="7_i0vr1"]
[ext_resource type="Texture2D" uid="uid://b7pxqtrck14cb" path="res://assets/Snake/Snake_00007.png" id="8_smv8s"]
[ext_resource type="Texture2D" uid="uid://o4hmfopwuhh6" path="res://assets/Snake/Snake_00008.png" id="9_0let4"]
[ext_resource type="Texture2D" uid="uid://c5vs0i3x26usv" path="res://assets/Snake/Snake_00009.png" id="10_c7bfy"]
[ext_resource type="Texture2D" uid="uid://brwntvv8se5p3" path="res://assets/Snake/Snake_00010.png" id="11_gf4aa"]
[ext_resource type="Texture2D" uid="uid://coui262gywlyj" path="res://assets/Snake/Snake_00011.png" id="12_a23se"]
[ext_resource type="Texture2D" uid="uid://b4ho4aglim0jh" path="res://assets/Snake/Snake_00012.png" id="13_k5uwn"]
[ext_resource type="Texture2D" uid="uid://ssmoqbs3jac8" path="res://assets/Snake/Snake_00013.png" id="14_s00qe"]
[ext_resource type="Texture2D" uid="uid://ow1a53rsnbem" path="res://assets/Snake/Snake_00014.png" id="15_sj2t2"]
[ext_resource type="Texture2D" uid="uid://u0vssafn4gsb" path="res://assets/Snake/Snake_00015.png" id="16_3xw8c"]
[ext_resource type="Texture2D" uid="uid://crvh62nkoqk50" path="res://assets/Snake/Snake_00016.png" id="17_hcn8l"]
[ext_resource type="Texture2D" uid="uid://bjh4ivr8gaxvi" path="res://assets/Snake/Snake_00017.png" id="18_smc2r"]
[ext_resource type="Texture2D" uid="uid://dobutbib4832i" path="res://assets/Snake/Snake_00018.png" id="19_dspwg"]
[ext_resource type="Texture2D" uid="uid://bpdpj5iei7sk3" path="res://assets/Snake/Snake_00019.png" id="20_4h2j0"]
[ext_resource type="Texture2D" uid="uid://cebpmbg17fdh0" path="res://assets/Snake/Snake_00020.png" id="21_wu86f"]
[ext_resource type="Texture2D" uid="uid://c253bqahyrq4t" path="res://assets/Snake/Snake_00021.png" id="22_646sb"]
[ext_resource type="Texture2D" uid="uid://ceg6oojmrgcrr" path="res://assets/Snake/Snake_00022.png" id="23_sj66t"]
[ext_resource type="Texture2D" uid="uid://ct3fmr3lj8tn1" path="res://assets/Snake/Snake_00023.png" id="24_waft5"]
[ext_resource type="Texture2D" uid="uid://c63yp8wjhvn4b" path="res://assets/Snake/Snake_00024.png" id="25_xyool"]
[ext_resource type="Texture2D" uid="uid://lwxp5byv3gm" path="res://assets/Snake/Snake_00025.png" id="26_6slq1"]
[ext_resource type="Texture2D" uid="uid://bkpoeo26bkl5x" path="res://assets/Snake/Snake_00026.png" id="27_gbj5q"]
[ext_resource type="Texture2D" uid="uid://cu5txj3g2wc23" path="res://assets/Snake/Snake_00027.png" id="28_lm5h1"]
[ext_resource type="Texture2D" uid="uid://bqfjvxf3cwgf" path="res://assets/Snake/Snake_00028.png" id="29_ncu40"]
[ext_resource type="Texture2D" uid="uid://cdxpr5t6k7etx" path="res://assets/Snake/Snake_00029.png" id="30_n7hly"]
[ext_resource type="Texture2D" uid="uid://c8mc2nku0ht4c" path="res://assets/Snake/Snake_00030.png" id="31_xt8ub"]
[ext_resource type="Texture2D" uid="uid://dv41mmve6ripf" path="res://assets/Snake/Snake_00031.png" id="32_tsch1"]
[ext_resource type="Texture2D" uid="uid://b2qr4ssf6d7cv" path="res://assets/Snake/Snake_00032.png" id="33_df2rs"]
[ext_resource type="Texture2D" uid="uid://dem8q0mvp1tk6" path="res://assets/Snake/Snake_00033.png" id="34_kxmuj"]
[ext_resource type="Texture2D" uid="uid://c0kiiv1nu104l" path="res://assets/Snake/Snake_00034.png" id="35_kd8wv"]
[ext_resource type="Texture2D" uid="uid://c1i7plf63of33" path="res://assets/Snake/Snake_00035.png" id="36_iafpd"]
[ext_resource type="Texture2D" uid="uid://dqas0f4mjv1in" path="res://assets/Snake/Snake_00036.png" id="37_rr5il"]
[ext_resource type="Texture2D" uid="uid://bjll7aulf8ot4" path="res://assets/Snake/Snake_00037.png" id="38_gw5ox"]
[ext_resource type="Texture2D" uid="uid://currhnunq1dus" path="res://assets/Snake/Snake_00038.png" id="39_1tt2m"]
[ext_resource type="Texture2D" uid="uid://bj7hjpxro62bi" path="res://assets/Snake/Snake_00039.png" id="40_sl1t5"]
[ext_resource type="Texture2D" uid="uid://bpr3wa7y4n3y6" path="res://assets/Snake/Snake_00040.png" id="41_k66gc"]
[ext_resource type="Texture2D" uid="uid://c6fdvav0wswkc" path="res://assets/Snake/Snake_00041.png" id="42_mfy3w"]
[ext_resource type="Texture2D" uid="uid://dii52dpswnges" path="res://assets/Snake/Snake_00042.png" id="43_tqkbx"]
[ext_resource type="Texture2D" uid="uid://7l3lng2e5jge" path="res://assets/Snake/Snake_00043.png" id="44_bkhyh"]
[ext_resource type="Texture2D" uid="uid://dvoi1kqgxnyl2" path="res://assets/Snake/Snake_00044.png" id="45_bqcki"]
[ext_resource type="Texture2D" uid="uid://un4hsjmpsyq3" path="res://assets/Snake/Snake_00045.png" id="46_fmqyv"]
[ext_resource type="Texture2D" uid="uid://cgmurob453s48" path="res://assets/Snake/Snake_00046.png" id="47_bkk5y"]
[ext_resource type="Texture2D" uid="uid://c0dgwrswh2ae6" path="res://assets/Snake/Snake_00047.png" id="48_5w1rq"]
[ext_resource type="Texture2D" uid="uid://c15jghriybe1c" path="res://assets/Snake/Snake_00048.png" id="49_t6odj"]
[ext_resource type="Texture2D" uid="uid://67irqpl3cofe" path="res://assets/Snake/Snake_00049.png" id="50_lx6nu"]
[ext_resource type="Texture2D" uid="uid://bxpk3iwuqrjyh" path="res://assets/Snake/Snake_00050.png" id="51_8r5vy"]
[ext_resource type="Texture2D" uid="uid://d4k16r5sxev1s" path="res://assets/Snake/Snake_00051.png" id="52_ofw4r"]
[ext_resource type="Texture2D" uid="uid://7ac0vt8bwtec" path="res://assets/Snake/Snake_00052.png" id="53_8olvt"]
[ext_resource type="Texture2D" uid="uid://bhq5mhf7icbq" path="res://assets/Snake/Snake_00053.png" id="54_pu2w8"]
[ext_resource type="Texture2D" uid="uid://dhwg8v602qi6u" path="res://assets/Snake/Snake_00054.png" id="55_rtd1i"]
[ext_resource type="Texture2D" uid="uid://bjkmp6va5ek3h" path="res://assets/Snake/Snake_00055.png" id="56_7ay8f"]
[ext_resource type="Texture2D" uid="uid://dkufsd8goenls" path="res://assets/Snake/Snake_00056.png" id="57_6yli2"]
[ext_resource type="Texture2D" uid="uid://g08q3x3gr1ji" path="res://assets/Snake/Snake_00057.png" id="58_ie4xe"]
[ext_resource type="Texture2D" uid="uid://uomb7y86sp2d" path="res://assets/Snake/Snake_00058.png" id="59_sp2b0"]
[ext_resource type="Texture2D" uid="uid://dm8xyirpbhtwo" path="res://assets/Snake/Snake_00059.png" id="60_6digi"]
[ext_resource type="Texture2D" uid="uid://cx0yxl22t0i47" path="res://assets/Snake/Snake_00060.png" id="61_iejmw"]
[ext_resource type="Texture2D" uid="uid://bnbyhjmrcfn7e" path="res://assets/Snake/Snake_00061.png" id="62_42ud1"]
[ext_resource type="Texture2D" uid="uid://bvbv41daw7mp0" path="res://assets/Snake/Snake_00062.png" id="63_7mdr5"]
[ext_resource type="Texture2D" uid="uid://cupxtp736cdcp" path="res://assets/Snake/Snake_00063.png" id="64_e0o4t"]
[ext_resource type="Texture2D" uid="uid://d2w38i8wllqjl" path="res://assets/Snake/Snake_00064.png" id="65_4svwn"]
[ext_resource type="Texture2D" uid="uid://bmpeniqux6pug" path="res://assets/Snake/Snake_00065.png" id="66_pel2i"]
[ext_resource type="Texture2D" uid="uid://ckngax046bjcm" path="res://assets/Snake/Snake_00066.png" id="67_roq3d"]
[ext_resource type="Texture2D" uid="uid://bcbawtbwvuk4u" path="res://assets/Snake/Snake_00067.png" id="68_stm87"]
[ext_resource type="Texture2D" uid="uid://crnvxsf4eud04" path="res://assets/Snake/Snake_00068.png" id="69_tvqql"]
[ext_resource type="Texture2D" uid="uid://bdtykcc8htgk7" path="res://assets/Snake/Snake_00069.png" id="70_k2joc"]
[ext_resource type="Texture2D" uid="uid://bvt3f4jjhluh3" path="res://assets/Snake/Snake_00070.png" id="71_13hkc"]
[ext_resource type="Texture2D" uid="uid://bru6revexjr3o" path="res://assets/Snake/Snake_00071.png" id="72_15dl6"]
[ext_resource type="Texture2D" uid="uid://blksd57x6c0fg" path="res://assets/Snake/Snake_00072.png" id="73_bpowk"]
[ext_resource type="Texture2D" uid="uid://cx0t8v2knas7a" path="res://assets/Snake/Snake_00073.png" id="74_6k2hx"]
[ext_resource type="Texture2D" uid="uid://b05fgcxu06hss" path="res://assets/Snake/Snake_00074.png" id="75_c74gp"]
[ext_resource type="Texture2D" uid="uid://b3mj5w6t4eab8" path="res://assets/Snake/Snake_00075.png" id="76_x3bxk"]
[ext_resource type="Texture2D" uid="uid://cbccoefc726pu" path="res://assets/Snake/Snake_00076.png" id="77_j4npk"]
[ext_resource type="Texture2D" uid="uid://ty128jry2ad8" path="res://assets/Snake/Snake_00077.png" id="78_l1xiy"]
[ext_resource type="Texture2D" uid="uid://b1o31wpn8idom" path="res://assets/Snake/Snake_00078.png" id="79_0vfsg"]
[ext_resource type="Texture2D" uid="uid://dt150qfh6kv8p" path="res://assets/Snake/Snake_00079.png" id="80_w06ea"]
[ext_resource type="Texture2D" uid="uid://vrcahubqynnq" path="res://assets/Snake/Snake_00080.png" id="81_ga06u"]
[ext_resource type="Texture2D" uid="uid://dbcyxewbuntxi" path="res://assets/Snake/Snake_00081.png" id="82_2rvdt"]
[ext_resource type="Texture2D" uid="uid://bcokuf4oxy3rf" path="res://assets/Snake/Snake_00082.png" id="83_k3and"]
[ext_resource type="Texture2D" uid="uid://dpfidhhj56lbt" path="res://assets/Snake/Snake_00083.png" id="84_6s152"]
[ext_resource type="Texture2D" uid="uid://rnkmt8emumxn" path="res://assets/Snake/Snake_00084.png" id="85_mc2we"]
[ext_resource type="Texture2D" uid="uid://30cfgsrasbab" path="res://assets/Snake/Snake_00085.png" id="86_3y3s6"]
[ext_resource type="Texture2D" uid="uid://58xbsnho0wwi" path="res://assets/Snake/Snake_00086.png" id="87_m1las"]
[ext_resource type="Texture2D" uid="uid://h5nfehirhwb8" path="res://assets/Snake/Snake_00087.png" id="88_oneje"]
[ext_resource type="Texture2D" uid="uid://g4mgrdsfu55s" path="res://assets/Snake/Snake_00088.png" id="89_sm4rp"]
[ext_resource type="Texture2D" uid="uid://dbkv71gpkv0vj" path="res://assets/Snake/Snake_00089.png" id="90_m202s"]
[ext_resource type="Texture2D" uid="uid://b2cts2j6hkup4" path="res://assets/Snake/Snake_00090.png" id="91_2ounh"]
[ext_resource type="Texture2D" uid="uid://dr4fj3868ybfd" path="res://assets/Snake/Snake_00091.png" id="92_m0ynt"]
[ext_resource type="Texture2D" uid="uid://c1flrn1eyqe5i" path="res://assets/Snake/Snake_00092.png" id="93_vntx0"]
[ext_resource type="Texture2D" uid="uid://cwmelsy8hjgiy" path="res://assets/Snake/Snake_00093.png" id="94_1e3f8"]
[ext_resource type="Texture2D" uid="uid://b3gt6bmmrh0hi" path="res://assets/Snake/Snake_00094.png" id="95_p7yp2"]
[ext_resource type="Texture2D" uid="uid://b4iibibihdunt" path="res://assets/Snake/Snake_00095.png" id="96_18er0"]
[ext_resource type="Texture2D" uid="uid://cryjte33q28c8" path="res://assets/Snake/Snake_00096.png" id="97_2q3su"]
[ext_resource type="Texture2D" uid="uid://c6me5q4not1di" path="res://assets/Snake/Snake_00097.png" id="98_ww66w"]
[ext_resource type="Texture2D" uid="uid://tqlqfw2xqft8" path="res://assets/Snake/Snake_00098.png" id="99_kkvi8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hv5k4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_bcl3u")
}, {
"duration": 1.0,
"texture": ExtResource("2_rlc6f")
}, {
"duration": 1.0,
"texture": ExtResource("3_a0ni1")
}, {
"duration": 1.0,
"texture": ExtResource("4_s13dl")
}, {
"duration": 1.0,
"texture": ExtResource("5_johfp")
}, {
"duration": 1.0,
"texture": ExtResource("6_22nao")
}, {
"duration": 1.0,
"texture": ExtResource("7_i0vr1")
}, {
"duration": 1.0,
"texture": ExtResource("8_smv8s")
}, {
"duration": 1.0,
"texture": ExtResource("9_0let4")
}, {
"duration": 1.0,
"texture": ExtResource("10_c7bfy")
}, {
"duration": 1.0,
"texture": ExtResource("11_gf4aa")
}, {
"duration": 1.0,
"texture": ExtResource("12_a23se")
}, {
"duration": 1.0,
"texture": ExtResource("13_k5uwn")
}, {
"duration": 1.0,
"texture": ExtResource("14_s00qe")
}, {
"duration": 1.0,
"texture": ExtResource("15_sj2t2")
}, {
"duration": 1.0,
"texture": ExtResource("16_3xw8c")
}, {
"duration": 1.0,
"texture": ExtResource("17_hcn8l")
}, {
"duration": 1.0,
"texture": ExtResource("18_smc2r")
}, {
"duration": 1.0,
"texture": ExtResource("19_dspwg")
}, {
"duration": 1.0,
"texture": ExtResource("20_4h2j0")
}, {
"duration": 1.0,
"texture": ExtResource("21_wu86f")
}, {
"duration": 1.0,
"texture": ExtResource("22_646sb")
}, {
"duration": 1.0,
"texture": ExtResource("23_sj66t")
}, {
"duration": 1.0,
"texture": ExtResource("24_waft5")
}, {
"duration": 1.0,
"texture": ExtResource("25_xyool")
}, {
"duration": 1.0,
"texture": ExtResource("26_6slq1")
}, {
"duration": 1.0,
"texture": ExtResource("27_gbj5q")
}, {
"duration": 1.0,
"texture": ExtResource("28_lm5h1")
}, {
"duration": 1.0,
"texture": ExtResource("29_ncu40")
}, {
"duration": 1.0,
"texture": ExtResource("30_n7hly")
}, {
"duration": 1.0,
"texture": ExtResource("31_xt8ub")
}, {
"duration": 1.0,
"texture": ExtResource("32_tsch1")
}, {
"duration": 1.0,
"texture": ExtResource("33_df2rs")
}, {
"duration": 1.0,
"texture": ExtResource("34_kxmuj")
}, {
"duration": 1.0,
"texture": ExtResource("35_kd8wv")
}, {
"duration": 1.0,
"texture": ExtResource("36_iafpd")
}, {
"duration": 1.0,
"texture": ExtResource("37_rr5il")
}, {
"duration": 1.0,
"texture": ExtResource("38_gw5ox")
}, {
"duration": 1.0,
"texture": ExtResource("39_1tt2m")
}, {
"duration": 1.0,
"texture": ExtResource("40_sl1t5")
}, {
"duration": 1.0,
"texture": ExtResource("41_k66gc")
}, {
"duration": 1.0,
"texture": ExtResource("42_mfy3w")
}, {
"duration": 1.0,
"texture": ExtResource("43_tqkbx")
}, {
"duration": 1.0,
"texture": ExtResource("44_bkhyh")
}, {
"duration": 1.0,
"texture": ExtResource("45_bqcki")
}, {
"duration": 1.0,
"texture": ExtResource("46_fmqyv")
}, {
"duration": 1.0,
"texture": ExtResource("47_bkk5y")
}, {
"duration": 1.0,
"texture": ExtResource("48_5w1rq")
}, {
"duration": 1.0,
"texture": ExtResource("49_t6odj")
}, {
"duration": 1.0,
"texture": ExtResource("50_lx6nu")
}, {
"duration": 1.0,
"texture": ExtResource("51_8r5vy")
}, {
"duration": 1.0,
"texture": ExtResource("52_ofw4r")
}, {
"duration": 1.0,
"texture": ExtResource("53_8olvt")
}, {
"duration": 1.0,
"texture": ExtResource("54_pu2w8")
}, {
"duration": 1.0,
"texture": ExtResource("55_rtd1i")
}, {
"duration": 1.0,
"texture": ExtResource("56_7ay8f")
}, {
"duration": 1.0,
"texture": ExtResource("57_6yli2")
}, {
"duration": 1.0,
"texture": ExtResource("58_ie4xe")
}, {
"duration": 1.0,
"texture": ExtResource("59_sp2b0")
}, {
"duration": 1.0,
"texture": ExtResource("60_6digi")
}, {
"duration": 1.0,
"texture": ExtResource("61_iejmw")
}, {
"duration": 1.0,
"texture": ExtResource("62_42ud1")
}, {
"duration": 1.0,
"texture": ExtResource("63_7mdr5")
}, {
"duration": 1.0,
"texture": ExtResource("64_e0o4t")
}, {
"duration": 1.0,
"texture": ExtResource("65_4svwn")
}, {
"duration": 1.0,
"texture": ExtResource("66_pel2i")
}, {
"duration": 1.0,
"texture": ExtResource("67_roq3d")
}, {
"duration": 1.0,
"texture": ExtResource("68_stm87")
}, {
"duration": 1.0,
"texture": ExtResource("69_tvqql")
}, {
"duration": 1.0,
"texture": ExtResource("70_k2joc")
}, {
"duration": 1.0,
"texture": ExtResource("71_13hkc")
}, {
"duration": 1.0,
"texture": ExtResource("72_15dl6")
}, {
"duration": 1.0,
"texture": ExtResource("73_bpowk")
}, {
"duration": 1.0,
"texture": ExtResource("74_6k2hx")
}, {
"duration": 1.0,
"texture": ExtResource("75_c74gp")
}, {
"duration": 1.0,
"texture": ExtResource("76_x3bxk")
}, {
"duration": 1.0,
"texture": ExtResource("77_j4npk")
}, {
"duration": 1.0,
"texture": ExtResource("78_l1xiy")
}, {
"duration": 1.0,
"texture": ExtResource("79_0vfsg")
}, {
"duration": 1.0,
"texture": ExtResource("80_w06ea")
}, {
"duration": 1.0,
"texture": ExtResource("81_ga06u")
}, {
"duration": 1.0,
"texture": ExtResource("82_2rvdt")
}, {
"duration": 1.0,
"texture": ExtResource("83_k3and")
}, {
"duration": 1.0,
"texture": ExtResource("84_6s152")
}, {
"duration": 1.0,
"texture": ExtResource("85_mc2we")
}, {
"duration": 1.0,
"texture": ExtResource("86_3y3s6")
}, {
"duration": 1.0,
"texture": ExtResource("87_m1las")
}, {
"duration": 1.0,
"texture": ExtResource("88_oneje")
}, {
"duration": 1.0,
"texture": ExtResource("89_sm4rp")
}, {
"duration": 1.0,
"texture": ExtResource("90_m202s")
}, {
"duration": 1.0,
"texture": ExtResource("91_2ounh")
}, {
"duration": 1.0,
"texture": ExtResource("92_m0ynt")
}, {
"duration": 1.0,
"texture": ExtResource("93_vntx0")
}, {
"duration": 1.0,
"texture": ExtResource("94_1e3f8")
}, {
"duration": 1.0,
"texture": ExtResource("95_p7yp2")
}, {
"duration": 1.0,
"texture": ExtResource("96_18er0")
}, {
"duration": 1.0,
"texture": ExtResource("97_2q3su")
}, {
"duration": 1.0,
"texture": ExtResource("98_ww66w")
}, {
"duration": 1.0,
"texture": ExtResource("99_kkvi8")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khhjv"]
size = Vector2(115.625, 0.426128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ch4d6"]
size = Vector2(15.7228, 7.00297)

[sub_resource type="CircleShape2D" id="CircleShape2D_2otel"]
radius = 562.108

[node name="snake" type="Area2D"]
position = Vector2(-70, 211)
script = ExtResource("1_n1tlj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hv5k4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(83, -211.574)
scale = Vector2(1, 7.387)
shape = SubResource("RectangleShape2D_khhjv")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 157)
rotation = -3.14159
scale = Vector2(12.2318, 12.2318)
shape = SubResource("RectangleShape2D_ch4d6")

[node name="Show" type="Area2D" parent="."]

[node name="SnakeRadius" type="CollisionShape2D" parent="Show"]
position = Vector2(83, -135)
shape = SubResource("CircleShape2D_2otel")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="Show" to="." method="_on_show_body_entered"]
